# masterblaster.py

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: not-a-bug--nor-a-feature-.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  requirements.txt
masterblaster/: __init__.py  gameaccount.py  headers.py  image.py  masterblaster.py  match.py  member.py  organisation.py  player.py  schedule.py  team.py
tests/: test_header.py  test_masterblaster.py  test_match.py  test_member.py  test_organisation.py  test_schedule.py  test_team.py
